# ROS_X3_Pathing

./: .gitmodules
maps/: 1_5Map.pgm  1_5Map.yaml
ros_ws/install/: local_setup.sh  setup.sh
ros_ws/install/ros_gz_example_application/share/ros_gz_example_application/: package.sh
ros_ws/install/ros_gz_example_bringup/share/ros_gz_example_bringup/: package.sh
ros_ws/install/ros_gz_example_bringup/share/ros_gz_example_bringup/config/: ros_gz_x3_bridge.yaml  x3_ekf.yaml  x3_ekf2.yaml
ros_ws/install/ros_gz_example_bringup/share/ros_gz_example_bringup/launch/: diff_drive.launch.py  x3.launch.py
ros_ws/install/ros_gz_example_description/share/ros_gz_example_description/: package.sh
ros_ws/install/ros_gz_example_gazebo/share/ros_gz_example_gazebo/: local_setup.sh  package.sh
ros_ws/install/x3_pathing/lib/x3_pathing/: draw_square
ros_ws/install/x3_pathing/share/x3_pathing/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/log/: latest_build
ros_ws/src/ros_gz_project_template/ros_gz_example_bringup/config/: .ros2_control.yaml.swp  nav2_params.yaml  ros_gz_x3_bridge.yaml  slam_params.yaml  x3.rviz  x3_ekf.yaml
ros_ws/src/ros_gz_project_template/ros_gz_example_bringup/launch/: navigation.launch.py  navigation.try.py  x3.launch.py
ros_ws/src/ros_gz_project_template/ros_gz_example_gazebo/worlds/: tugbot_warehouse.sdf  x3.sdf
ros_ws/src/ros_gz_project_template/x3_bt/: CMakeLists.txt  package.xml
ros_ws/src/ros_gz_project_template/x3_bt/src/: Route_BT.xml  bt.cpp  checkAltitude_bt.cpp  checkBattery_bt.cpp  getTakeoffLocation_bt.cpp  loadMap_bt.cpp  setAltitude_bt.cpp  setNavGoal_bt.cpp
ros_ws/src/ros_gz_project_template/x3_interfaces/: CMakeLists.txt  package.xml
ros_ws/src/ros_gz_project_template/x3_interfaces/action/: SetHeight.action
ros_ws/src/ros_gz_project_template/x3_pathing/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros_ws/src/ros_gz_project_template/x3_pathing/action/: setHeight.action
ros_ws/src/ros_gz_project_template/x3_pathing/x3_pathing/: altimeter_publisher.py  altitude_controller.py  draw_square.py  keyboard_teleop.py  template_ros.py
(+9 files in other folders)
